--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 TMDB_API_KEY=75c89a72eaa5326f7aa9af8f9c6eaba4
-FRONTEND_URL=https://<your-frontend-url>.vercel.app
+FRONTEND_URL=https://movie-finder-six-sigma.vercel.app
 PORT=4000
