--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 TMDB_API_KEY=75c89a72eaa5326f7aa9af8f9c6eaba4
-FRONTEND_URL=https://movie-finder-rv2j-jy3194we6-inchara-manjunaths-projects.vercel.app
+FRONTEND_URL=https://movie-finder1.netlify.app/
 PORT=4000
